fix(nav): position toggles on right so no jumping

--- a/src/scss/landing-page.scss
+++ b/src/scss/landing-page.scss
@@ -38,6 +38,7 @@
 a.cds--header__menu-item {
   background-color: transparent;
   color: $text-primary;
+  white-space: nowrap;
 }
 
 a.cds--header__name {
@@ -65,6 +66,17 @@ a.cds--header__name:hover {
 
 .cds--header__menu-item--current::after {
   border-bottom: 2px solid rgba(222, 173, 250, 1);
+}
+
+.header-toggle-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+.header-toggle-wrapper .cds--toggle:nth-child(2) {
+  //set width bc language toggle jumps 2px when it says "EN"
+  width: 74px;
 }
 
 // -----------------
